# ICompletist

./: .gitignore  LICENSE  README.md  __main__.py  background.js  icompletist_test_ml.py  manifest.json  offscreen.html  offscreen.js  options.html  options.js  plant_pathogen_db_complete.py  popup.css  popup.html  popup.js  pyproject.toml  tab.html  test_icompletist.py  versionning.sty
icompletist/: README.md  background.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js  tab.html
icompletist/lib/: arxiv.js  biorxiv.js  core.js  elsevier.js  enrich.js  history.js  identifiers.js  ieee.js  landingpdf.js  openreview.js  pdfcheck.js  pmc.js  resolver.js  risexport.js  semanticscholar.js  springer.js  unpaywall.js  urlresolve.js  wiley.js
icompletist/lib/search/: core.js  ieee.js  orchestrate.js  pubmed.js  scopus.js  select.js
lib/: biorxiv.js  core.js  history.js  identifiers.js  ieee.js  openalex.js  pmc.js  risexport.js  semanticscholar.js  urlresolve.js  wikidata.js
lib/search/: core.js  orchestrate.js  s2.js  scopus.js  spec.js
src/ICompletist/: __init__.py  __main__.py  core.py  elsevier.py  get_pdf.py  names.py  pipeline.py  pubmed.py  scholar.py
