[project]
name = "ICompletist"
version = "0.1.0"
description = "automated literature mining"
authors = [
    {name = "NikolaySimankov", email = "77026145+NikolaySimankov@users.noreply.github.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

dependencies = [
    "requests",
    "boto3",
    "beautifulsoup4",
    "lxml",
    "serpapi",
]

[project.optional-dependencies]
dev = [
  "ruff==0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99
target-version = "py312"
fix = true
unsafe-fixes = false

[tool.ruff.lint.isort]
lines-between-types = 1
relative-imports-order = "closest-to-furthest"
section-order = ["future", "third-party", "first-party", "local-folder"]

[tool.ruff.format]

[tool.ruff.lint]
select = ["E", "F", "W", "N", "B", "A", "C", "T", "Q", "RUF"]
ignore = [
    "D100", "D101", "D102", "D103", "D104",
    "D401",
    "F541",
    "N803", "N806"
]